Jokify: Attempt to fix alignment issue on mobile devices 3; change background color to understand what is going on

--- a/apps/jokify/sass/main.scss
+++ b/apps/jokify/sass/main.scss
@@ -124,6 +124,8 @@ $jokeSpacing: 15px;
   overflow: auto;
   display: flex;
   align-items: center;
+  background-color: white;
+  color: black;
 }
 
 .jokifier {
